--- a/MeetUp/app/build.gradle
+++ b/MeetUp/app/build.gradle
@@ -30,6 +30,9 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
+    implementation 'com.google.firebase:firebase-database:19.2.1'
+    implementation "com.karumi:dexter:5.0.0"
+
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.google.maps.android:android-maps-utils:0.5'
