--- a/MeetUp/build.gradle
+++ b/MeetUp/build.gradle
@@ -20,7 +20,8 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        jcenter()
+        maven { url "https://jitpack.io"}
     }
 }
 
